@@ -18,53 +18,61 @@
 package me.desht.pneumaticcraft.common.util;
 
 import com.google.common.base.Splitter;
+import me.desht.pneumaticcraft.api.item.IFilteringItem;
 import me.desht.pneumaticcraft.api.item.IInventoryItem;
-import me.desht.pneumaticcraft.api.item.ITagFilteringItem;
 import me.desht.pneumaticcraft.api.lib.Names;
 import me.desht.pneumaticcraft.api.misc.Symbols;
 import me.desht.pneumaticcraft.common.XPFluidManager;
 import me.desht.pneumaticcraft.common.core.ModFluids;
 import me.desht.pneumaticcraft.common.item.ItemRegistry;
-import net.minecraft.block.Block;
-import net.minecraft.block.BlockState;
-import net.minecraft.block.FlowingFluidBlock;
-import net.minecraft.entity.Entity;
-import net.minecraft.entity.LivingEntity;
-import net.minecraft.entity.MobEntity;
-import net.minecraft.entity.ai.attributes.ModifiableAttributeInstance;
-import net.minecraft.entity.item.ExperienceOrbEntity;
-import net.minecraft.entity.item.ItemEntity;
-import net.minecraft.entity.monster.ZombieEntity;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.entity.player.PlayerInventory;
-import net.minecraft.item.DyeColor;
-import net.minecraft.item.Item;
-import net.minecraft.item.ItemStack;
-import net.minecraft.tileentity.TileEntity;
-import net.minecraft.util.Direction;
-import net.minecraft.util.NonNullList;
-import net.minecraft.util.ResourceLocation;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.vector.Vector3d;
-import net.minecraft.util.math.vector.Vector3i;
-import net.minecraft.util.text.ITextComponent;
-import net.minecraft.util.text.StringTextComponent;
-import net.minecraft.util.text.TextFormatting;
-import net.minecraft.util.text.TranslationTextComponent;
-import net.minecraft.world.IBlockReader;
-import net.minecraft.world.World;
+import net.minecraft.ChatFormatting;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.Direction;
+import net.minecraft.core.NonNullList;
+import net.minecraft.core.Vec3i;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.Tag;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.MutableComponent;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.server.level.ServerPlayer;
+import net.minecraft.tags.TagKey;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.ExperienceOrb;
+import net.minecraft.world.entity.Mob;
+import net.minecraft.world.entity.ai.attributes.AttributeInstance;
+import net.minecraft.world.entity.item.ItemEntity;
+import net.minecraft.world.entity.monster.Zombie;
+import net.minecraft.world.entity.player.Inventory;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.item.DyeColor;
+import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.level.BlockGetter;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.LevelAccessor;
+import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.LiquidBlock;
+import net.minecraft.world.level.block.entity.BlockEntity;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.material.Fluid;
+import net.minecraft.world.phys.Vec3;
 import net.minecraftforge.common.ForgeMod;
+import net.minecraftforge.common.capabilities.ForgeCapabilities;
 import net.minecraftforge.common.util.BlockSnapshot;
 import net.minecraftforge.event.ForgeEventFactory;
 import net.minecraftforge.fluids.FluidStack;
 import net.minecraftforge.fluids.capability.IFluidHandler;
 import net.minecraftforge.fluids.capability.IFluidHandler.FluidAction;
-import net.minecraftforge.fml.server.ServerLifecycleHooks;
 import net.minecraftforge.items.IItemHandler;
 import net.minecraftforge.items.ItemStackHandler;
+import net.minecraftforge.registries.ForgeRegistries;
+import net.minecraftforge.registries.IForgeRegistry;
+import net.minecraftforge.server.ServerLifecycleHooks;
 import org.apache.commons.lang3.math.NumberUtils;
 
 import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
@@ -77,73 +85,24 @@ import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 public class PneumaticCraftUtils {
+    // an impossible blockpos to indicate invalid positions
+    private static final BlockPos INVALID_POS = new BlockPos(0, Integer.MIN_VALUE, 0);
+
     private static final int MAX_CHAR_PER_LINE = 45;
 
-    /**
-     * Returns the EnumFacing of the given entity.
-     *
-     * @param entity the entity
-     * @param includeUpAndDown false when UP/DOWN should not be included.
-     * @return the entity's facing direction
-     */
-    public static Direction getDirectionFacing(LivingEntity entity, boolean includeUpAndDown) {
-        double yaw = entity.yRot;
-        while (yaw < 0)
-            yaw += 360;
-        yaw = yaw % 360;
-        if (includeUpAndDown) {
-            if (entity.xRot > 45) return Direction.DOWN;
-            else if (entity.xRot < -45) return Direction.UP;
-        }
-        if (yaw < 45) return Direction.SOUTH;
-        else if (yaw < 135) return Direction.WEST;
-        else if (yaw < 225) return Direction.NORTH;
-        else if (yaw < 315) return Direction.EAST;
-        else return Direction.SOUTH;
-    }
-
-    /**
-     * Get a yaw angle from an EnumFacing
-     *
-     * @param facing the facing direction
-     * @return the yaw angle
-     */
-    public static int getYawFromFacing(Direction facing) {
-        switch (facing) {
-            case NORTH:
-                return 180;
-            case WEST:
-                return 90;
-            case EAST:
-                return -90;
-            default:  // SOUTH
-                return 0;
-        }
-    }
-
-    public static final double[] sin;
-    public static final double[] cos;
-    public static final int CIRCLE_POINTS = 500;
-
-    /*
-     * Initializes the sin,cos and tan variables, so that they can be used without having to calculate them every time (render tick).
-     */
+    private static final int[] DYE_COLORS = new int[DyeColor.values().length];
     static {
-        sin = new double[CIRCLE_POINTS];
-        cos = new double[CIRCLE_POINTS];
-
-        for (int i = 0; i < CIRCLE_POINTS; i++) {
-            double angle = 2 * Math.PI * i / CIRCLE_POINTS;
-            sin[i] = Math.sin(angle);
-            cos[i] = Math.cos(angle);
+        for (DyeColor color : DyeColor.values()) {
+            float[] rgb = color.getTextureDiffuseColors();
+            DYE_COLORS[color.getId()] = (int) (rgb[0] * 255) << 16 | ((int) (rgb[1] * 255) << 8) | (int) (rgb[2] * 255);
         }
     }
 
-    public static List<ITextComponent> splitStringComponent(String text) {
+    public static List<? extends Component> splitStringComponent(String text) {
         return asStringComponent(splitString(text, MAX_CHAR_PER_LINE));
     }
 
-    public static List<ITextComponent> splitStringComponent(String text, int maxCharPerLine) {
+    public static List<? extends Component> splitStringComponent(String text, int maxCharPerLine) {
         return asStringComponent(splitString(text, maxCharPerLine));
     }
 
@@ -152,7 +111,7 @@ public class PneumaticCraftUtils {
 
         StringBuilder builder = new StringBuilder(text.length());
         String format = "";
-        for (String para : text.split(Pattern.quote("${br}"))) {
+        for (String para : text.split(Pattern.quote("\n"))) {
             StringTokenizer tok = new StringTokenizer(para, " ");
             int lineLen = 0;
             while (tok.hasMoreTokens()) {
@@ -162,7 +121,7 @@ public class PneumaticCraftUtils {
                 for (String word : Splitter.fixedLength(maxCharPerLine).split(token)) {
                     int idx = word.lastIndexOf("\u00a7");
                     if (idx >= 0 && idx < word.length() - 1) {
-                        // note any formatting sequence so it can also be applied to start of next line
+                        // note any formatting sequence, so it can also be applied to start of next line
                         format = word.substring(idx, idx + 2);
                         // formatting sequences do not contribute to line length
                         lineLen -= 2;
@@ -191,8 +150,8 @@ public class PneumaticCraftUtils {
         return splitString(text, MAX_CHAR_PER_LINE);
     }
 
-    public static List<ITextComponent> asStringComponent(List<String> l) {
-        return l.stream().map(StringTextComponent::new).collect(Collectors.toList());
+    public static List<? extends Component> asStringComponent(List<String> l) {
+        return l.stream().map(Component::literal).toList();
     }
 
     /**
@@ -203,7 +162,7 @@ public class PneumaticCraftUtils {
      * @return a formatted time
      */
     public static String convertTicksToMinutesAndSeconds(long ticks, boolean fraction) {
-        String part = ticks % 20 * 5 + "";
+        String part = String.valueOf(ticks % 20 * 5);
         if (part.length() < 2) part = "0" + part;
         ticks /= 20;// first convert to seconds.
         if (ticks < 60) {
@@ -239,7 +198,8 @@ public class PneumaticCraftUtils {
      * @return a formatted string representation
      */
     public static String roundNumberTo(double value, int decimals) {
-        return String.format("%." + decimals + "f", roundNumberToDouble(value, decimals));
+        String fmtStr = "%." + decimals + "f";
+        return String.format(fmtStr, roundNumberToDouble(value, decimals));
     }
 
     /**
@@ -279,10 +239,10 @@ public class PneumaticCraftUtils {
      * given string list.  This method is aware of inventory items implementing the {@link IInventoryItem} interface.
      *
      * @param textList string list to add information to
-     * @param originalStacks array of item stacks to sort & combine
+     * @param originalStacks array of item stacks to sort and combine
      */
-    public static void summariseItemStacks(List<ITextComponent> textList, ItemStack[] originalStacks) {
-        summariseItemStacks(textList, originalStacks, Symbols.bullet().getString());
+    public static List<Component> summariseItemStacks(List<Component> textList, List<ItemStack> originalStacks) {
+        return summariseItemStacks(textList, originalStacks, Symbols.bullet());
     }
 
     /**
@@ -291,25 +251,25 @@ public class PneumaticCraftUtils {
      * implementing the {@link IInventoryItem} interface.
      *
      * @param textList text component list to add information to
-     * @param originalStacks array of item stacks to sort & combine
+     * @param originalStacks array of item stacks to sort and combine
      * @param prefix prefix string to prepend to each line of output
      */
-    public static void summariseItemStacks(List<ITextComponent> textList, ItemStack[] originalStacks, String prefix) {
-        ItemStack[] stacks = Arrays.copyOf(originalStacks, originalStacks.length);
-
-        Arrays.sort(stacks, (o1, o2) -> o1.getHoverName().getString().compareToIgnoreCase(o2.getHoverName().getString()));
+    public static List<Component> summariseItemStacks(List<Component> textList, List<ItemStack> originalStacks, MutableComponent prefix) {
+        List<ItemStack> sortedStacks = originalStacks.stream()
+                .sorted((o1, o2) -> o1.getHoverName().getString().compareToIgnoreCase(o2.getHoverName().getString()))
+                .toList();
 
         int itemCount = 0;
         ItemStack prevItemStack = ItemStack.EMPTY;
         List<ItemStack> prevInventoryItems = null;
-        for (ItemStack stack : stacks) {
+        for (ItemStack stack : sortedStacks) {
             if (!stack.isEmpty()) {
-                if (!stack.sameItem(prevItemStack) || prevInventoryItems != null && prevInventoryItems.size() > 0) {
+                if (!ItemStack.isSameItem(stack, prevItemStack) || prevInventoryItems != null && prevInventoryItems.size() > 0) {
                     if (!prevItemStack.isEmpty()) {
-                        addText(textList, prefix  + PneumaticCraftUtils.convertAmountToString(itemCount) + " x " + prevItemStack.getHoverName().getString());
+                        textList.add(prefix.copy().append(PneumaticCraftUtils.convertAmountToString(itemCount) + " x " + prevItemStack.getHoverName().getString()));
                     }
                     if (prevInventoryItems != null) {
-                        summariseItemStacks(textList, prevInventoryItems.toArray(new ItemStack[0]), prefix + Symbols.ARROW_DOWN_RIGHT + " ");
+                        summariseItemStacks(textList, prevInventoryItems, prefix.copy().append(Symbols.ARROW_DOWN_RIGHT + " "));
                     }
                     prevItemStack = stack;
                     itemCount = stack.getCount();
@@ -320,13 +280,14 @@ public class PneumaticCraftUtils {
             }
         }
         if (itemCount > 0 && !prevItemStack.isEmpty()) {
-            addText(textList,prefix + PneumaticCraftUtils.convertAmountToString(itemCount) + " x " + prevItemStack.getHoverName().getString());
-            summariseItemStacks(textList, prevInventoryItems.toArray(new ItemStack[0]), prefix + Symbols.ARROW_DOWN_RIGHT + " ");
+            textList.add(prefix.copy().append(PneumaticCraftUtils.convertAmountToString(itemCount) + " x " + prevItemStack.getHoverName().getString()));
+            summariseItemStacks(textList, prevInventoryItems, prefix.copy().append(Symbols.ARROW_DOWN_RIGHT + " "));
         }
+        return textList;
     }
 
-    private static void addText(List<ITextComponent> l, String s) {
-        l.add(new StringTextComponent(s));
+    private static void addText(List<Component> l, String s) {
+        l.add(Component.literal(s));
     }
 
     /**
@@ -357,7 +318,7 @@ public class PneumaticCraftUtils {
         return Math.pow(x1 - x2, 2) + Math.pow(y1 - y2, 2) + Math.pow(z1 - z2, 2);
     }
 
-    public static double distBetweenSq(Vector3i pos, double x, double y, double z) {
+    public static double distBetweenSq(Vec3i pos, double x, double y, double z) {
         return distBetweenSq(pos.getX() + 0.5, pos.getY() + 0.5, pos.getZ() + 0.5, x, y, z);
     }
 
@@ -373,11 +334,11 @@ public class PneumaticCraftUtils {
         return (x1 - x2) * (x1 - x2) + (y1 - y2) * (y1 - y2);
     }
 
-    public static double distBetween(Vector3i pos, double x, double y, double z) {
+    public static double distBetween(Vec3i pos, double x, double y, double z) {
         return distBetween(pos.getX() + 0.5, pos.getY() + 0.5, pos.getZ() + 0.5, x, y, z);
     }
 
-    public static double distBetween(Vector3i pos1, Vector3i pos2) {
+    public static double distBetween(Vec3i pos1, Vec3i pos2) {
         return distBetween(pos1, pos2.getX() + 0.5, pos2.getY() + 0.5, pos2.getZ() + 0.5);
     }
 
@@ -386,32 +347,34 @@ public class PneumaticCraftUtils {
         if (filterStack.isEmpty() || stack.isEmpty()) return false;
 
         if (checkModSimilarity) {
-            String mod1 = filterStack.getItem().getRegistryName().getNamespace();
-            String mod2 = stack.getItem().getRegistryName().getNamespace();
+            String mod1 = getRegistryName(filterStack.getItem()).map(ResourceLocation::getNamespace).orElse("");
+            String mod2 = getRegistryName(stack.getItem()).map(ResourceLocation::getNamespace).orElse("");
             return mod1.equals(mod2);
         }
 
-        if (filterStack.getItem() instanceof ITagFilteringItem) {
-            return ((ITagFilteringItem) filterStack.getItem()).matchTags(filterStack, stack.getItem());
+        if (filterStack.getItem() instanceof IFilteringItem f) {
+            return f.matchFilter(filterStack, stack);
+        } else if (stack.getItem() instanceof IFilteringItem f) {
+            return f.matchFilter(stack, filterStack);
         }
 
         if (filterStack.getItem() != stack.getItem()) return false;
 
         boolean durabilityOK = !checkDurability || (filterStack.getMaxDamage() > 0 && filterStack.getDamageValue() == stack.getDamageValue());
-        boolean nbtOK = !checkNBT || ItemStack.tagMatches(filterStack, stack);
+        boolean nbtOK = !checkNBT || Objects.equals(filterStack.getTag(), stack.getTag());
 
         return durabilityOK && nbtOK;
     }
 
     public static boolean isBlockLiquid(Block block) {
-        return block instanceof FlowingFluidBlock;
+        return block instanceof LiquidBlock;
     }
 
-    public static void dropItemOnGround(ItemStack stack, World world, BlockPos pos) {
+    public static void dropItemOnGround(ItemStack stack, Level world, BlockPos pos) {
         dropItemOnGround(stack, world, pos.getX() + 0.5, pos.getY() + 0.5, pos.getZ() + 0.5);
     }
 
-    public static void dropItemOnGround(ItemStack stack, World world, double x, double y, double z) {
+    public static void dropItemOnGround(ItemStack stack, Level world, double x, double y, double z) {
         float dX = world.random.nextFloat() * 0.8F + 0.1F;
         float dY = world.random.nextFloat() * 0.8F + 0.1F;
         float dZ = world.random.nextFloat() * 0.8F + 0.1F;
@@ -419,35 +382,33 @@ public class PneumaticCraftUtils {
         ItemEntity entityItem = new ItemEntity(world, x + dX, y + dY, z + dZ, stack.copy());
 
         if (stack.hasTag()) {
-            entityItem.getItem().setTag(stack.getTag().copy());
+            entityItem.getItem().setTag(Objects.requireNonNull(stack.getTag()).copy());
         }
 
         float factor = 0.05F;
         entityItem.setDeltaMovement(world.random.nextGaussian() * factor, world.random.nextGaussian() * factor + 0.2, world.random.nextGaussian() * factor);
         world.addFreshEntity(entityItem);
-        stack.setCount(0);
     }
 
-    public static void dropItemOnGroundPrecisely(ItemStack stack, World world, double x, double y, double z) {
+    public static void dropItemOnGroundPrecisely(ItemStack stack, Level world, double x, double y, double z) {
         ItemEntity entityItem = new ItemEntity(world, x, y, z, stack.copy());
 
         if (stack.hasTag()) {
-            entityItem.getItem().setTag(stack.getTag().copy());
+            entityItem.getItem().setTag(Objects.requireNonNull(stack.getTag()).copy());
         }
         entityItem.setDeltaMovement(0, 0, 0);
         world.addFreshEntity(entityItem);
-        stack.setCount(0);
     }
 
-    public static PlayerEntity getPlayerFromId(UUID uuid) {
+    public static ServerPlayer getPlayerFromId(UUID uuid) {
         return ServerLifecycleHooks.getCurrentServer().getPlayerList().getPlayer(uuid);
     }
 
-    public static PlayerEntity getPlayerFromName(String name) {
+    public static ServerPlayer getPlayerFromName(String name) {
         return ServerLifecycleHooks.getCurrentServer().getPlayerList().getPlayerByName(name);
     }
 
-    public static boolean isPlayerOp(PlayerEntity player) {
+    public static boolean isPlayerOp(Player player) {
         return player.hasPermissions(2);
     }
 
@@ -461,7 +422,8 @@ public class PneumaticCraftUtils {
      * @param newState the blockstate to change the position to
      * @return true if the block could be placed, false otherwise
      */
-    public static boolean tryPlaceBlock(World w, BlockPos pos, PlayerEntity player, Direction face, BlockState newState) {
+    @SuppressWarnings("UnusedReturnValue")
+    public static boolean tryPlaceBlock(Level w, BlockPos pos, Player player, Direction face, BlockState newState) {
         BlockSnapshot snapshot = BlockSnapshot.create(w.dimension(), w, pos);
         if (!ForgeEventFactory.onBlockPlace(player, snapshot, face)) {
             w.setBlockAndUpdate(pos, newState);
@@ -478,8 +440,8 @@ public class PneumaticCraftUtils {
      * @param player the player to mimic
      * @return a dummy player-sized living entity
      */
-    public static MobEntity createDummyEntity(PlayerEntity player) {
-        ZombieEntity dummy = new ZombieEntity(player.level) {
+    public static Mob createDummyEntity(Player player) {
+        Zombie dummy = new Zombie(player.level()) {
 //            @Override
 //            protected void registerAttributes() {
 //                super.registerAttributes();
@@ -497,7 +459,7 @@ public class PneumaticCraftUtils {
      * @param item item to consume
      * @return true if an item was consumed
      */
-    public static boolean consumeInventoryItem(PlayerInventory inv, Item item) {
+    public static boolean consumeInventoryItem(Inventory inv, Item item) {
         for (int i = 0; i < inv.items.size(); ++i) {
             if (inv.items.get(i).getItem() == item) {
                 inv.items.get(i).shrink(1);
@@ -533,16 +495,29 @@ public class PneumaticCraftUtils {
      * @return true if an item was consumed
      */
     @SuppressWarnings("BooleanMethodIsAlwaysInverted")
-    public static boolean consumeInventoryItem(PlayerInventory inv, ItemStack stack) {
+    public static boolean consumeInventoryItem(Inventory inv, ItemStack stack) {
         int toConsume = stack.getCount();
         for (int i = 0; i < inv.items.size(); ++i) {
             ItemStack invStack = inv.items.get(i);
-            if (ItemStack.isSame(invStack, stack)) {
-                int consumed = Math.min(invStack.getCount(), stack.getCount());
+            int consumed;
+            if (ItemStack.isSameItem(invStack, stack)) {
+                consumed = Math.min(invStack.getCount(), stack.getCount());
                 invStack.shrink(consumed);
-                toConsume -= consumed;
-                if (toConsume <= 0) return true;
+            } else {
+                consumed = invStack.getCapability(ForgeCapabilities.ITEM_HANDLER).map(h -> {
+                    for (int j = 0; j < h.getSlots(); j++) {
+                        ItemStack invStack2 = h.getStackInSlot(j);
+                        if (ItemStack.isSameItem(invStack2, stack)) {
+                            int extracted = Math.min(invStack2.getCount(), stack.getCount());
+                            ItemStack s = h.extractItem(j, extracted, false);
+                            return s.getCount();
+                        }
+                    }
+                    return 0;
+                }).orElse(0);
             }
+            toConsume -= consumed;
+            if (toConsume <= 0) return true;
         }
         return toConsume <= 0;
     }
@@ -553,13 +528,13 @@ public class PneumaticCraftUtils {
      * @param s the translation key
      * @return the translated string (if called server-side, a string which The One Probe will handle client-side)
      */
-    public static TranslationTextComponent xlate(String s, Object... args) {
-        return new TranslationTextComponent(s, args);
+    public static MutableComponent xlate(String s, Object... args) {
+        return Component.translatable(s, args);
     }
 
-    public static ITextComponent dyeColorDesc(int c) {
-        return new TranslationTextComponent("color.minecraft." + DyeColor.byId(c).getName())
-                .withStyle(TextFormatting.BOLD);
+    public static MutableComponent dyeColorDesc(int c) {
+        return Component.translatable("color.minecraft." + DyeColor.byId(c).getName())
+                .withStyle(ChatFormatting.BOLD);
     }
 
     public static void copyItemHandler(IItemHandler source, ItemStackHandler dest, int maxSlots) {
@@ -574,17 +549,21 @@ public class PneumaticCraftUtils {
         copyItemHandler(source, dest, source.getSlots());
     }
 
-    public static BlockPos getPosForEntity(Entity e) {
-        return new BlockPos(e.getX(), e.getY(), e.getZ());
+    public static String posToString(@Nullable BlockPos pos) {
+        return isValidPos(pos) ? String.format("%d, %d, %d", pos.getX(), pos.getY(), pos.getZ()) : "-";
     }
 
-    public static String posToString(BlockPos pos) {
-        return String.format("%d,%d,%d", pos.getX(), pos.getY(), pos.getZ());
+    public static boolean isValidPos(@Nullable BlockPos pos) {
+        return pos != null && pos != INVALID_POS;
     }
 
-    public static <T extends TileEntity> Optional<T> getTileEntityAt(IBlockReader w, BlockPos pos, Class<T> cls) {
+    public static BlockPos invalidPos() {
+        return INVALID_POS;
+    }
+
+    public static <T extends BlockEntity> Optional<T> getTileEntityAt(BlockGetter w, BlockPos pos, Class<T> cls) {
         if (w != null && pos != null) {
-            TileEntity te = w.getBlockEntity(pos);
+            BlockEntity te = w.getBlockEntity(pos);
             if (te != null && cls.isAssignableFrom(te.getClass())) {
                 //noinspection unchecked
                 return Optional.of((T) te);
@@ -600,10 +579,10 @@ public class PneumaticCraftUtils {
      *
      * @param handler the fluid handler
      * @param orb the XP orb
-     * @param action whether or not to simulate the action
+     * @param action whether to simulate the action
      * @return true if the XP orb was (or could be) fully absorbed into the fluid handler
      */
-    public static boolean fillTankWithOrb(IFluidHandler handler, ExperienceOrbEntity orb, FluidAction action) {
+    public static boolean fillTankWithOrb(IFluidHandler handler, ExperienceOrb orb, FluidAction action) {
         int ratio = XPFluidManager.getInstance().getXPRatio(ModFluids.MEMORY_ESSENCE.get());
         int fluidAmount = orb.getValue() * ratio;
         FluidStack toFill = new FluidStack(ModFluids.MEMORY_ESSENCE.get(), fluidAmount);
@@ -614,28 +593,18 @@ public class PneumaticCraftUtils {
         return filled == fluidAmount;
     }
 
-    public static double getPlayerReachDistance(PlayerEntity player) {
+    public static double getPlayerReachDistance(Player player) {
         if (player != null) {
-            ModifiableAttributeInstance attr = player.getAttribute(ForgeMod.REACH_DISTANCE.get());
+            AttributeInstance attr = player.getAttribute(ForgeMod.BLOCK_REACH.get());
             if (attr != null) return attr.getValue() + 1D;
         }
         return 4.5D;
     }
 
-    public static boolean canPlayerReach(PlayerEntity player, BlockPos pos) {
+    public static boolean canPlayerReach(Player player, BlockPos pos) {
         if (player == null) return false;
         double dist = getPlayerReachDistance(player);
-        return player.distanceToSqr(Vector3d.atCenterOf(pos)) <= dist * dist;
-    }
-
-    /**
-     * In 1.17 this will become non-trivial.  Adding it now to make porting easier in future.
-     *
-     * @param world the world
-     * @return minimum height allowed for this world.
-     */
-    public static int getMinHeight(@SuppressWarnings("unused") World world) {
-        return 0;
+        return player.distanceToSqr(Vec3.atCenterOf(pos)) <= dist * dist;
     }
 
     /**
@@ -654,7 +623,7 @@ public class PneumaticCraftUtils {
     }
 
     /**
-     * Check if a given string encodes a valid number (negative & decimal point included). Also intended to work for
+     * Check if a given string encodes a valid number (negative &amp; decimal point included). Also intended to work for
      * partial strings, so useful for textfield validation.
      *
      * @param str the string to test
@@ -687,5 +656,82 @@ public class PneumaticCraftUtils {
      */
     public static String modDefaultedString(ResourceLocation rl) {
         return rl.getNamespace().equals(Names.MOD_ID) ? rl.getPath() : rl.toString();
+    }
+
+    /**
+     * Convert a DyeColor to packed RGB integer (top 8 bits - alpha - are 0)
+     * @param dyeColor the dye color
+     * @return packed RGB integer
+     */
+    public static int getDyeColorAsRGB(DyeColor dyeColor) {
+        return DYE_COLORS[dyeColor.getId()];
+    }
+
+    /**
+     * Get the name of the block at the given position
+     * @param level the level
+     * @param pos the blockpos
+     * @return the block name, empty if the given position isn't currently loaded
+     */
+    public static Component getBlockNameAt(Level level, BlockPos pos) {
+        return level.isLoaded(pos) ? xlate(level.getBlockState(pos).getBlock().getDescriptionId()) : Component.empty().plainCopy();
+    }
+
+    public static CompoundTag copyNBTWithout(@Nonnull CompoundTag nbt, @Nonnull String skip) {
+        CompoundTag newNBT = new CompoundTag();
+
+        for (String key : nbt.getAllKeys()) {
+            if (!skip.equals(key)) {
+                Tag subTag = nbt.get(key);
+                if (subTag != null) {
+                    newNBT.put(key, subTag.copy());
+                }
+            }
+        }
+        return newNBT.isEmpty() ? new CompoundTag() : newNBT;
+    }
+
+    public static Set<TagKey<Item>> itemTags(Item item) {
+        return ForgeRegistries.ITEMS.tags().getReverseTag(item)
+                .map(reverseTag -> reverseTag.getTagKeys().collect(Collectors.toSet()))
+                .orElse(Set.of());
+    }
+
+    public static Optional<ResourceLocation> getRegistryName(Item item) {
+        return getRegistryName(ForgeRegistries.ITEMS, item);
+    }
+
+    public static Optional<ResourceLocation> getRegistryName(Block block) {
+        return getRegistryName(ForgeRegistries.BLOCKS, block);
+    }
+
+    public static Optional<ResourceLocation> getRegistryName(Fluid fluid) {
+        return getRegistryName(ForgeRegistries.FLUIDS, fluid);
+    }
+
+    public static Optional<ResourceLocation> getRegistryName(Entity entity) {
+        return getRegistryName(ForgeRegistries.ENTITY_TYPES, entity.getType());
+    }
+
+    public static <T> Optional<ResourceLocation> getRegistryName(IForgeRegistry<T> registry, T object) {
+        return Optional.ofNullable(registry.getKey(object));
+    }
+
+    public static boolean isChunkLoaded(LevelAccessor level, BlockPos pos) {
+        return level.hasChunk(pos.getX() >> 4, pos.getZ() >> 4);
+    }
+
+    public static double average(long[] pValues) {
+        long i = 0L;
+
+        for(long j : pValues) {
+            i += j;
+        }
+
+        return (double)i / (double)pValues.length;
+    }
+
+    public static Component combineComponents(List<Component> components) {
+        return components.stream().reduce((c1, c2) -> c1.copy().append("\n").append(c2)).orElse(Component.empty());
     }
 }
